@@ -2657,6 +2657,16 @@ and can remain so, the character can begin to suck at the targets brain. \
 After a short strain, the killing act is completed, and the character \
 is relieved of any hunger. 
 
+FIGHTER_MONKEYGRIP=MONKEY_GRIP
+MONKEYPGRIP=MONKEY_GRIP
+MONKEY_GRIP=<ABILITY>\
+Example  : \n\r\
+This skill allows the fighter to wield two two-handed weapons as if they \
+were one-handed.  Dual Wielding skill would still be required in order to \
+actually use the second weapon in combat.  Wielding a two-handed weapon \
+this way will cause severe loss of attack and damage bonuses, but those \
+losses are in turn mitigated by proficiency and expertise. 
+
 FIGHTER_MONKEYPUNCH=MONKEY_PUNCH
 MONKEYPUNCH=MONKEY_PUNCH
 MONKEY_PUNCH=<ABILITY>\
